# pet-service

./: Cargo.toml  README.md  README_PROJECT.md  nx.json  package-lock.json  package.json  tsconfig.base.json
.bruno/: .gitignore  Health Check.bru  README.md  bruno.json  collection.bru
.bruno/Consul/: Check Pet Service Health.bru  Verify Consul Registration.bru
.bruno/Pets/: Create Multiple Pets.bru  Create Pet.bru  Delete Nonexistent Pet.bru  Delete Pet.bru  Get All Pets.bru  Get Nonexistent Pet.bru  Get Pet by ID.bru  Update Nonexistent Pet.bru  Update Pet.bru
.bruno/environments/: Local.bru
.github/workflows/: ci.yml
.nx/workflows/: agents.yaml
apps/pet-ui/: LIBRARY-STRUCTURE.md  README.md  index.html  project.json  vite.config.ts
apps/pet-ui-e2e/: cypress.config.ts  project.json
apps/pet-ui-e2e/src/e2e/: app.cy.ts
apps/pet-ui/src/app/: app.module.scss  app.spec.tsx  app.tsx
apps/web_service/: Cargo.toml  project.json
apps/web_service/src/: main.rs  routes.rs
libs/consul_client/: Cargo.toml  project.json
libs/consul_client/src/: lib.rs  tests.rs
libs/models/: Cargo.toml  project.json
libs/models/src/: lib.rs  tests.rs
libs/pet-api/: README.md  project.json  vite.config.ts
libs/pet-api/src/: index.ts
libs/pet-api/src/lib/: pet-api-client.spec.ts  pet-api-client.ts
libs/pet-form/: README.md  project.json  vite.config.ts
libs/pet-form/src/: index.ts
libs/pet-form/src/lib/: pet-form.module.scss  pet-form.spec.tsx  pet-form.tsx
libs/pet-list/: README.md  project.json  vite.config.ts
libs/pet-list/src/: index.ts
libs/pet-list/src/lib/: pet-list.module.scss  pet-list.spec.tsx  pet-list.tsx
libs/pet-types/: README.md  project.json  vite.config.ts
libs/pet-types/src/: index.ts
libs/pet-types/src/lib/: pet.types.spec.ts  pet.types.ts
libs/storage/: Cargo.toml  project.json
libs/storage/src/: lib.rs  tests.rs
