[package]
name = "web_service"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
models = { path = "../../libs/models" }
storage = { path = "../../libs/storage" }
consul_client = { path = "../../libs/consul_client" }
tokio = { version = "1", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
