[package]
name = "web_service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde.workspace = true
serde_json = "1.0"
storage = { path = "../../libs/storage" }
consul_client = { path = "../../libs/consul_client" }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
