[package]
name = "consul_client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
